# rhdh-skill

./: AGENTS.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/adr/: 0002-stdlib-only-python-clis.md
skills/_shared/: list_k8s_test_configs.py  ocp_lifecycle.py  redhat_lifecycle.py  rhdh_lifecycle.py
skills/create-plugin/: SKILL.md
skills/create-plugin/scripts/: export-plugin.py  scaffold.py
skills/konflux-tekton-updates/: SKILL.md
skills/konflux-tekton-updates/references/: plugin-catalog.md
skills/lifecycle/: SKILL.md
skills/lifecycle/scripts/: check_aks_lifecycle.py  check_eks_lifecycle.py  check_gke_lifecycle.py  check_pg_lifecycle.py
skills/lifecycle/workflows/: check-ocp.md  check-redhat.md  check-rhdh.md
skills/prow/: SKILL.md
skills/prow-aks-jobs/scripts/: list_aks_jobs.py
skills/prow-eks-jobs/scripts/: list_eks_jobs.py
skills/prow-gke-jobs/scripts/: list_gke_jobs.py
skills/prow-trigger-nightly/: SKILL.md
skills/prow-trigger-nightly/scripts/: trigger_nightly_job.py
skills/prow/references/: release-branch-config.md
skills/prow/scripts/: analyze_coverage.py  generate_cluster_pool.py  generate_test_entry.py  list_aks_jobs.py  list_cluster_pools.py  list_eks_jobs.py  list_gke_jobs.py  list_ocp_test_configs.py  rhdh_lifecycle
skills/prow/workflows/: commission-release.md  decommission-release.md
skills/rhdh/: SKILL.md
skills/rhdh-jira/: SKILL.md
skills/rhdh-test-plan-review/: SKILL.md
skills/skill-maker/: SKILL.md
(+33 files in other folders)
