[project]
name = "rhdh-skill"
version = "0.3.2"
description = "Claude Code skill for RHDH plugin development"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"

# No runtime dependencies - stdlib only!

[tool.setuptools.packages.find]
where = ["skills/rhdh"]
include = ["rhdh*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyyaml>=6.0",  # Only for SKILL.md structure tests
    "ruff>=0.4.0",
]

[project.scripts]
rhdh = "rhdh.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled by formatter
